# MeshSwap

./: .gitmodules  README.md  justfile
1inch/: .gitignore  order.json  package.json  tsconfig.json
1inch/src/: balance-checker.ts  config.ts  escrow-factory.ts  hasher_test.ts  index.ts  init_contract.ts  interface.ts  maker.ts  resolver.ts  taker.ts  utils.ts  wallet.ts
1inch/wallet/: maker.json  taker.json
bitcoin/: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  start_regtest.sh
bitcoin/scripts/: start_regtest.sh  stop_bitcoind.sh
bitcoin/src/: args.rs  blockchain.rs  constants.rs  contract.rs  deployment.rs  error.rs  main.rs  primitives.rs  taproot.rs  transaction.rs  wallet.rs
bitcoin/swaps/: swap_bitcoin.json
bitcoin/tests/: htlc_claim.rs  htlc_refund.rs
bitcoin/wallet/: admin.toml  maker.toml  taker.toml
demo_script/: balance_checker.sh  deploy_bitcoin_contract.sh  generate_proof.sh  justfile  network_monitor.sh  run_maker.sh  run_taker.sh  spin_chain.sh  stop_chain.sh  verify_proof.sh  withdraw_maker.sh
ethereum/: foundry.toml  justfile  remappings.txt
ethereum/script/: DeployContracts.s.sol
ethereum/src/: EscrowFactory.sol  Resolver.sol  TestEscrowFactory.sol
evm/: .env.example  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
evm/scripts/: deploy.ts
evm/src/: index.ts
evm/test/: setup.ts
evm/test/__tests__/: MeshSwap.test.ts  deployment.test.ts
evm/test/typescript/: index.ts
prover/: .env.example  .gitignore  Cargo.toml  justfile
prover/lib/: Cargo.toml
prover/lib/src/: lib.rs
prover/program/: Cargo.toml
prover/program/src/: main.rs
prover/script/: Cargo.toml
