[package]
name = "chain-bitcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32.6", features = ["serde", "rand"] }
bdk = { version = "0.30", features = ["all-keys", "use-esplora-blocking", "rpc"] }
bitcoincore-rpc = "0.17"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
bip39 = "2.2.0"
clap = { version = "4.0", features = ["derive"] }

