[package]
name = "chain-bitcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk = { version = "0.28.2", features = ["all-keys", "rpc","compiler",] }
bitcoincore-rpc = "0.17"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
bip39 = "2.0.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
eyre = "0.6.12"

