[package]
name = "proofimpl-atomic-swap"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", package = "secp256k1", tag = "patch-0.30.0-sp1-5.0.0", features = [
    "recovery",
    "global-context",
    "serde",
] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }


