[package]
version = "0.1.0"
name = "atomic-swap-program"
edition = "2021"

[dependencies]
sp1-zkvm = "5.0.8"
proofimpl-atomic-swap = { path = "../lib" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", package = "secp256k1", tag = "patch-0.30.0-sp1-5.0.0", features = [
    "recovery",
    "global-context",
    "serde",
] }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
